fix the option align in add question page

--- a/testbed/app/assets/stylesheets/application.css
+++ b/testbed/app/assets/stylesheets/application.css
@@ -23,3 +23,7 @@
   height: 30px !important;
   width: 30px !important; 
 }
+
+.horizontal_boolean_option{
+  margin-left:5px
+}
